[package]
name = "gamedata_scanner"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
hemtt-sqf = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }
hemtt-workspace = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }
hemtt-preprocessor = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }
hemtt-common = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }
hemtt-config = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }

[dependencies]
parser_code = { path = "parser_code" }
thiserror = "2.0.12"
log = "0.4.26"
rayon = "1.8.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
num_cpus = "1.16.0"

[dev-dependencies]
tempfile = "3.8.1"
env_logger = "0.11.2"

# [lints.rust]
# dead_code = "allow"
# unused_parens = "allow"
# unused_imports = "allow"
# unused_variables = "allow"
# unused_mut = "allow"
