[package]
name = "gamedata_scanner"
version = "0.1.0"
edition = "2021"

# Include test fixtures in the package
include = [
    "src/**/*",
    "test/fixtures/**/*",
    "Cargo.toml",
]

[workspace]
members = [
    "parser_advanced",
    "parser_simple",
    "models",
    "tool"
]

[workspace.dependencies]
hemtt-config = { path = "../HEMTT/libs/config" }
hemtt-workspace = { path = "../HEMTT/libs/workspace" }
hemtt-preprocessor = { path = "../HEMTT/libs/preprocessor" }
hemtt-common = { path = "../HEMTT/libs/common" }
# hemtt-config = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }
# hemtt-workspace = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }
# hemtt-preprocessor = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }
# hemtt-common = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "b74d694" }

[dependencies]
parser_advanced = { path = "./parser_advanced" }
parser_simple = { path = "./parser_simple" }
models = { path = "./models" }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.0"
indicatif = "0.17.11"
clap = { version = "4.5.32", features = ["derive"] }
log = "0.4.26"
env_logger = "0.11.7"
num_cpus = "1.16.0"
walkdir = "2.5.0"
chrono = { version = "0.4.40", features = ["serde"] }
serde_json = "1.0.140"
dashmap = "6.1.0"

[dev-dependencies]
tempfile = "3.19.0"
env_logger = "0.11.7"

# [lints.rust]
# dead_code = "allow"
# unused_parens = "allow"
# unused_imports = "allow"
# unused_variables = "allow"
# unused_mut = "allow"
