[package]
name = "parser_code"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "batch_parser"
path = "src/bin/batch_parser.rs"

[dependencies]
hemtt-config = { workspace = true }
hemtt-workspace = { workspace = true }
hemtt-preprocessor = { workspace = true }
hemtt-common = { workspace = true }
chumsky = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.18.0"
log = "0.4.26"
env_logger = "0.10.0"
clap = { version = "4.4.18", features = ["derive"] }
serde_json = "1.0.113"
chrono = "0.4.34"
regex = "1.10.3"
lazy_static = "1.4.0"
pathdiff = "0.2.1"

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_assignments = "allow"