[package]
name = "parser_code"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "batch_parser"
path = "src/bin/batch_parser.rs"

[dependencies]
hemtt-config = { workspace = true }
hemtt-workspace = { workspace = true }
hemtt-preprocessor = { workspace = true }
hemtt-common = { workspace = true }
chumsky = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.0"
log = "0.4.26"
env_logger = "0.11.7"
clap = { version = "4.5.32", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.40"
regex = "1.11.1"
lazy_static = "1.5.0"
pathdiff = "0.2.3"
rayon = "1.10.0"
simple_logger = "5.0.0"
codespan-reporting = "0.11.1"
indicatif = "0.17.11"

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_assignments = "allow"