[package]
name = "batch_scanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "batch_check"
path = "src/bin/batch_check.rs"

[dependencies]
gamedata_scanner = { path = ".." }
models = { path = "../models" }
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.26"
env_logger = "0.11.7"
chrono = "0.4.40"
indicatif = "0.17.11"
rayon = "1.10.0"

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_assignments = "allow"